--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(ValidacionCruzadaglm)
 export(ValidacionCruzadasvm)
 export(formulaglm)
 export(fronteraglm)
+export(fronteraknn)
 export(fronterasvm)
 export(probcorte)
