--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,7 @@ Title: Funciones para curso CII3427 - UDP
 Version: 0.1
 Authors: Raul Pezoa
 Description: What the package does (one paragraph).
-Depends: R (>= 3.1.2),
-    caret,
-    data.table,
-    rpart,
-    rattle,
-    randomForest,
-    e1071
+Depends: R (>= 3.1.2)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
